<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insertar.InsertView">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etIdApartment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inApart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_apartment"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbTypeTel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_llamada"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNombre"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdApartment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_apartment"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:text="@string/agregar_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etParqueadero" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etParqueadero"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inParq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_parqueadero"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rbTypeTel"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre">

        <RadioButton
            android:id="@+id/rbCell"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbTextCel" />

        <RadioButton
            android:id="@+id/rbTel"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbTextTel" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>